<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:title="@string/apps_filter">
  <CheckBoxPreference
    android:title="@string/internal_only"
    android:summary="@string/internal_only_desc"
    android:defaultValue="true"
    android:key="internal_only"/>
  <CheckBoxPreference
    android:title="@string/show_apk"
    android:summary="@string/show_apk_desc"
    android:defaultValue="true"
    android:key="show_apk"/>
  <CheckBoxPreference
    android:title="@string/show_data"
    android:summary="@string/show_data_desc"
    android:defaultValue="true"
    android:key="show_data"/>
  <CheckBoxPreference
    android:title="@string/show_dalvikcache"
    android:defaultValue="true"
    android:summary="@string/show_dalvikcache_desc"
    android:key="show_dalvikCache"/>
  <CheckBoxPreference
    android:title="@string/show_cache"
    android:defaultValue="false"
    android:summary="@string/show_cache_desc"
    android:key="show_cache"/>
</PreferenceScreen>